--- a/index.html
+++ b/index.html
@@ -499,18 +499,18 @@ button.expander {
                             <div class="job-item p-4 mb-4"> 
                                 <div class="row g-4"> 
                                     <div class="col-sm-12 col-md-8 d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid border rounded" src="https://download.logo.wine/logo/Dollar_Tree/Dollar_Tree-Logo.wine.png" alt="" style="width: 80px; height: 80px;"> 
+                                        <img class="flex-shrink-0 img-fluid border rounded" src="https://download.logo.wine/logo/Amazon_(company)/Amazon_(company)-Logo.wine.png" alt="" style="width: 80px; height: 80px;"> 
                                         <div class="text-start ps-4"> 
                                             <h5 class="mb-3"><img src="https://flagcdn.com/us.svg" width="25px">&nbsp;Senior Director</h5>                                                  
                                             <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Cupertino, CA, United States</span> 
-                                            <span class="text-truncate me-3"><i class="far text-primary me-2 fa-building"></i>Dollar Tree</span> 
+                                            <span class="text-truncate me-3"><i class="far text-primary me-2 fa-building"></i>Amazon</span> 
                                             <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$140 - $456&nbsp;</span> 
                                         </div>
                                     </div>                                         
                                     <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center"> 
                                         <div class="d-flex mb-3"> 
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> 
-                                            <a class="btn btn-primary" href="https://aff2jobs.com/go?c=5806&p=18278">Apply Now</a> 
+                                            <a class="btn btn-primary" href="https://www.opph3hftrk.com/6DKH5J8/29W68JP/">Apply Now</a> 
                                         </div>                                             
                                         <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2025</small> 
                                     </div>                                         
@@ -530,7 +530,7 @@ button.expander {
                                     <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center"> 
                                         <div class="d-flex mb-3"> 
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> 
-                                            <a class="btn btn-primary" href="https://aff2jobs.com/go?c=5787&p=18278">Apply Now</a> 
+                                            <a class="btn btn-primary" href="https://www.opph3hftrk.com/6DKH5J8/26LHXZM/">Apply Now</a> 
                                         </div>                                             
                                         <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small> 
                                     </div>                                         
@@ -539,19 +539,19 @@ button.expander {
                             <div class="job-item p-4 mb-4"> 
                                 <div class="row g-4"> 
                                     <div class="col-sm-12 col-md-8 d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid border rounded" src="https://download.logo.wine/logo/Netflix/Netflix-Logo.wine.png" alt="" style="width: 80px; height: 80px;"> 
+                                        <img class="flex-shrink-0 img-fluid border rounded" src="https://download.logo.wine/logo/Apple_Inc./Apple_Inc.-Logo.wine.png" alt="" style="width: 80px; height: 80px;"> 
                                         <div class="text-start ps-4">
                                             <h5 class="mb-3"></h5>
                                             <h5 class="mb-3"><img src="https://flagcdn.com/us.svg" width="25px">&nbsp;Senior Software Engineer</h5>
                                             <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Seattle, WA, United States</span> 
-                                            <span class="text-truncate me-3"><i class="far fa-building text-primary me-2"></i>Netflix</span> 
+                                            <span class="text-truncate me-3"><i class="far fa-building text-primary me-2"></i>Apple</span> 
                                             <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$125 - $300</span>
                                         </div>
                                     </div>                                         
                                     <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center"> 
                                         <div class="d-flex mb-3"> 
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> 
-                                            <a class="btn btn-primary" href="https://aff2jobs.com/go?c=5789&p=18278">Apply Now</a> 
+                                            <a class="btn btn-primary" href="https://www.opph3hftrk.com/6DKH5J8/26DZF27/">Apply Now</a> 
                                         </div>                                             
                                         <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2026</small> 
                                     </div>                                         
@@ -560,7 +560,7 @@ button.expander {
                             <div class="job-item p-4 mb-4"> 
                                 <div class="row g-4"> 
                                     <div class="col-sm-12 col-md-8 d-flex align-items-center"> 
-                                        <img class="flex-shrink-0 img-fluid border rounded" src="https://download.logo.wine/logo/SkyWork_Airlines/SkyWork_Airlines-Logo.wine.png" alt="" style="width: 80px; height: 80px;"> 
+                                        <img class="flex-shrink-0 img-fluid border rounded" src="https://download.logo.wine/logo/Google/Google-Logo.wine.png" alt="" style="width: 80px; height: 80px;"> 
                                         <div class="text-start ps-4">
                                             <h5 class="mb-3"><img src="https://flagcdn.com/us.svg" width="25px">&nbsp;Lead Consultant</h5> 
                                             <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Memphis, TN, United States</span>&nbsp;
@@ -571,7 +571,7 @@ button.expander {
                                     <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center"> 
                                         <div class="d-flex mb-3"> 
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> 
-                                            <a class="btn btn-primary" href="https://aff2jobs.com/go?c=5406&p=18278">Apply Now</a> 
+                                            <a class="btn btn-primary" href="https://www.opph3hftrk.com/6DKH5J8/26B6MK1/">Apply Now</a> 
                                         </div>                                             
                                         <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small> 
                                     </div>                                         
@@ -591,7 +591,7 @@ button.expander {
                                     <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center"> 
                                         <div class="d-flex mb-3"> 
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> 
-                                            <a class="btn btn-primary" href="https://aff2jobs.com/go?c=5807&p=18278">Apply Now</a> 
+                                            <a class="btn btn-primary" href="https://www.opph3hftrk.com/6DKH5J8/268RQSD/">Apply Now</a> 
                                         </div>                                             
                                         <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 05 Jul, 2026</small> 
                                     </div>                                         
