--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
             </div>
         </div>
         <!-- Carousel End -->
-
+<script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=553997&format=300x250&ga=g"></script>
+<noscript><a href="https://yllix.com/publishers/553997" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/300x250.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
 
         <!-- Search Start -->
         <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
