--- a/index.html
+++ b/index.html
@@ -598,6 +598,70 @@ button.expander {
                                     </div>                                         
                                 </div>                                     
                             </div>
+							  <div class="job-item p-4 mb-4"> 
+                                <div class="row g-4"> 
+                                    <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                                        <img class="flex-shrink-0 img-fluid border rounded" src="https://download.logo.wine/logo/Pepsi/Pepsi-Logo.wine.png" alt="" style="width: 80px; height: 80px;"> 
+                                        <div class="text-start ps-4">
+                                            <h5 class="mb-3"></h5>
+                                            <h5 class="mb-3"><img src="https://flagcdn.com/us.svg" width="25px">&nbsp;SALES MAN</h5>
+                                            <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Seattle, WA, United States</span> 
+                                            <span class="text-truncate me-3"><i class="far fa-building text-primary me-2"></i>Pepsi Job</span> 
+                                            <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$125 - $200</span>
+                                        </div>
+                                    </div>                                         
+                                    <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center"> 
+                                        <div class="d-flex mb-3"> 
+                                            <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> 
+                                            <a class="btn btn-primary" href="https://www.opph3hftrk.com/6DKH5J8/26GC9QS/">Apply Now</a> 
+                                        </div>                                             
+                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2026</small> 
+                                    </div>                                         
+                                </div>                                     
+                            </div>
+							<div class="job-item p-4 mb-4"> 
+                                <div class="row g-4"> 
+                                    <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                                        <img class="flex-shrink-0 img-fluid border rounded" src="https://download.logo.wine/logo/FedEx/FedEx-Logo.wine.png" alt="" style="width: 80px; height: 80px;"> 
+                                        <div class="text-start ps-4">
+                                            <h5 class="mb-3"></h5>
+                                            <h5 class="mb-3"><img src="https://flagcdn.com/us.svg" width="25px">&nbsp;Oparetor</h5>
+                                            <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>San Jose, CA, United States</span> 
+                                            <span class="text-truncate me-3"><i class="far fa-building text-primary me-2"></i>Fedex</span> 
+                                            <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$125 - $250</span>
+                                        </div>
+                                    </div>                                         
+                                    <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center"> 
+                                        <div class="d-flex mb-3"> 
+                                            <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> 
+                                            <a class="btn btn-primary" href="https://www.opph3hftrk.com/6DKH5J8/26387TZ/">Apply Now</a> 
+                                        </div>                                             
+                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2026</small> 
+                                    </div>                                         
+                                </div>                                     
+                            </div>
+							<div class="job-item p-4 mb-4"> 
+                                <div class="row g-4"> 
+                                    <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                                        <img class="flex-shrink-0 img-fluid border rounded" src="https://download.logo.wine/logo/SkyWork_Airlines/SkyWork_Airlines-Logo.wine.png" alt="" style="width: 80px; height: 80px;"> 
+                                        <div class="text-start ps-4">
+                                            <h5 class="mb-3"></h5>
+                                            <h5 class="mb-3"><img src="https://flagcdn.com/us.svg" width="25px">&nbsp;Airport</h5>
+                                            <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Newnan, GE, United States</span> 
+                                            <span class="text-truncate me-3"><i class="far fa-building text-primary me-2"></i>Skyline</span> 
+                                            <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$155 - $280</span>
+                                        </div>
+                                    </div>                                         
+                                    <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center"> 
+                                        <div class="d-flex mb-3"> 
+                                            <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a> 
+                                            <a class="btn btn-primary" href="https://www.opph3hftrk.com/6DKH5J8/26CKJ9L/">Apply Now</a> 
+                                        </div>                                             
+                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2026</small> 
+                                    </div>                                         
+                                </div>                                     
+                            </div>
+						
                             <a class="btn btn-primary py-3 px-5" href="job-list.html">Browse More Jobs</a>
                         </div>
                     </div>
